cmake_minimum_required(VERSION 3.5)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ChiliException)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ChiliWin)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Colors)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/COMInitializer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/DXErr)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/FrameBuffers)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Game)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Graphics)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Keyboard)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/MainWindow)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Mouse)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Resource)